--- a/zope-2-13-27-versions.cfg
+++ b/zope-2-13-27-versions.cfg
@@ -1,5 +1,5 @@
 [buildout]
-extends = https://s3.amazonaws.com/all-the-plones-1/zopetoolkit-1-0-8-ztk-versions.cfg
+extends = https://all-the-plones.aclark.net/zopetoolkit-1-0-8-ztk-versions.cfg
 versions = versions
 
 [versions]
