--- a/plone-4-3-18-versions.cfg
+++ b/plone-4-3-18-versions.cfg
@@ -1,9 +1,7 @@
 [buildout]
-# This file is part of buildout.coredev repository: https://github.com/plone/buildout.coredev
-# The plone release team is responsible for it,
-# if you have suggestions, please open an issue at: https://github.com/plone/buildout.coredev/issues
-extends = http://dist.plone.org/versions/zopetoolkit-1-0-8-zopeapp-versions.cfg
-          http://dist.plone.org/versions/zope-2-13-27-versions.cfg
+extends = 
+    https://all-the-plones.aclark.net/zopetoolkit-1-0-8-zopeapp-versions.cfg
+    https://all-the-plones.aclark.net/zope-2-13-27-versions.cfg
 
 [versions]
 # Zope overrides
