--- a/zope-2-13-27-versions.cfg
+++ b/zope-2-13-27-versions.cfg
@@ -1,5 +1,5 @@
 [buildout]
-extends = https://all-the-plones.aclark.net/zopetoolkit-1-0-8-ztk-versions.cfg
+extends = https://raw.githubusercontent.com/aclark4life/buildout-plone/master/zopetoolkit-1-0-8-ztk-versions.cfg
 versions = versions
 
 [versions]
